--- a/src/styles/main-page.scss
+++ b/src/styles/main-page.scss
@@ -1,142 +1,144 @@
 body {
-    height: 100%;
+	height: 100%;
+}
+
+a {
+	text-decoration: none;
 }
 
 img {
-    max-width: 100%;
-    height: auto;
-    display: block;
+	max-width: 100%;
+	height: auto;
+	display: block;
 }
 
 .container {
-    padding-left: 40px;
-    padding-right: 40px;
+	padding-left: 40px;
+	padding-right: 40px;
 }
 
 .header {
-    height: 80px;
-    background: #000;
-    color: white;
+	height: 80px;
+	background: #000;
+	color: white;
 }
 
 .header-container {
-    display: flex;
-    height: 100%;
-    justify-content: space-between;
-    align-items: center;  
-    padding-left: 40px;
-    padding-right: 40px;
-    max-width: 1170px;
-    margin-right: auto;
-    margin-left: auto;
+	display: flex;
+	height: 100%;
+	justify-content: space-between;
+	align-items: center;
+	padding-left: 40px;
+	padding-right: 40px;
+	max-width: 1170px;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 .logo {
-    text-transform: uppercase;
-    font-size: 18px;
-    display: flex;
-    text-decoration: none;
+	text-transform: uppercase;
+	font-size: 18px;
+	display: flex;
+	text-decoration: none;
 }
 
-.logo-icon::after, .heart-icon {
-    content: '';
-    display: inline-block;
-    background-image: url(../img/disk.png);
-    background-position: center center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 14px;
-    height: 14px;
+.logo-icon::after,
+.heart-icon {
+	content: "";
+	display: inline-block;
+	background-image: url(../img/disk.png);
+	background-position: center center;
+	background-size: contain;
+	background-repeat: no-repeat;
+	width: 14px;
+	height: 14px;
 }
 
 .heart-icon {
-    background-image: url(../img/heart-png-15.png);
+	background-image: url(../img/heart-png-15.png);
 }
 
 .menu {
-    display: flex;
-
+	display: flex;
 }
 .menu-item {
-    padding: 20px;
-    text-decoration: underline;
+	padding: 20px;
 }
 
 .title {
-    margin: 0;
-    text-align: center;
-    padding: 15% 0 30px;
-    font-size: 35px;
+	margin: 0;
+	text-align: center;
+	padding: 15% 0 30px;
+	font-size: 35px;
 }
 
 .title-padding {
-    padding-top: 5%;
+	padding-top: 5%;
 }
 
 .input {
-    display: block;
-    margin: 0 auto 30px;
-    width: 50%;
-    height: 35px;
+	display: block;
+	margin: 0 auto 30px;
+	width: 50%;
+	height: 35px;
 }
 
 .card-list {
-    display: flex;
-    flex-wrap: wrap;
-    padding-bottom: 90px;
+	display: flex;
+	flex-wrap: wrap;
+	padding-bottom: 90px;
 }
 
-.controls{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
+.controls {
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
 }
 
-.controls{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
+.controls {
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
 }
 
 .item {
-    width: 18%;
-    margin-right: 2.5%;
-    padding-bottom: 10px;
-    height: auto;
+	width: 18%;
+	margin-right: 2.5%;
+	padding-bottom: 10px;
+	height: auto;
 }
 
 .item:nth-child(5n) {
-    margin-right: 0;
+	margin-right: 0;
 }
 
 .card-link {
-    display: block;
-    text-decoration: none;
+	display: block;
+	text-decoration: none;
 }
 
 .card-title {
-    font-size: 14px;
-    font-weight: bold;
-    padding: 10px 0;
-    text-align: center;
+	font-size: 14px;
+	font-weight: bold;
+	padding: 10px 0;
+	text-align: center;
 }
 
 .image {
-    display: block;
-    max-width: 90%;
-    margin: 0 auto;
+	display: block;
+	max-width: 90%;
+	margin: 0 auto;
 }
 
 .footer {
-    display: flex;
-    height: 60px;
-    width: 100%;
-    background: #000;
-    color: white;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    bottom: 0;
-    left: 0;
+	display: flex;
+	height: 60px;
+	width: 100%;
+	background: #000;
+	color: white;
+	justify-content: center;
+	align-items: center;
+	position: absolute;
+	bottom: 0;
+	left: 0;
 }
-
